# scout

./: .gitignore  .stylish-haskell.yaml  README.md  scout.cabal
app/: Constants.hs  Display.hs  Main.hs  Options.hs  Requests.hs  Types.hs
app/Scout/: Display.hs  Options.hs  Requests.hs  Util.hs
app/Scout/Display/: Apt.hs  Csv.hs
app/Scout/Options/: Format.hs  Search.hs
assets/: sample-request.json
lib/: Scout.hs
lib/Scout/: Display.hs  Options.hs  Types.hs  Util.hs
lib/Scout/Options/: Format.hs  Search.hs
test/: TestScout.hs
vim/lua/telescope/_extensions/: scout.lua
vim/lua/telescope/_extensions/scout/: picker.lua
