cabal-version:      3.0
name:               scout
version:            0.1.0.0
synopsis:           Search packages in Hackage
-- A longer description of the package.
-- description:
bug-reports:        https://github.com/aloussase/scout/issues
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2022
category:           Cli
extra-source-files: README.md

executable scout
    main-is:          Main.hs
    ghc-options:      -Wall -Wunused-packages -O2
    other-modules:
          Scout.Types
        , Scout.Display
        , Scout.Display.Apt
        , Scout.Display.Csv
        , Scout.Options
        , Scout.Options.Format
        , Scout.Options.Search
        , Scout.Requests
        , Scout.Util

    build-depends:
            base                              ^>=4.15.1.0
          , aeson                             >= 2.1.1 && < 2.2
          , ansi-terminal                     >= 0.11.3 && < 0.12
          , async                             >= 2.2.4 && < 2.3
          , containers                        >= 0.6.5 && < 0.7
          , data-default-class                >= 0.1.2 && < 0.2
          , lens                              >= 5.2 && < 5.3
          , optparse-applicative              >= 0.17.0 && < 0.18
          , req                               >= 3.13.0 && < 3.14
          , text                              >= 1.2.4 && < 1.3
          , time                              >= 1.9.3 && < 1.10

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings, TemplateHaskell, DeriveGeneric, DataKinds, ScopedTypeVariables, TypeApplications
